changed first page

--- a/src/index.jade
+++ b/src/index.jade
@@ -16,7 +16,14 @@ html
     article
 
       section
-        h1 Who is Satomi Suyama?
+        h2.bullet Who is Tony?
+        ul
+          li 杜 雷
+          li 31
+          li Married
+
+      section
+        h2 Where I was from?
 
       section
         h2 Keyboard Interaction
